--- a/diapos/ConfiguracionGenerador.org
+++ b/diapos/ConfiguracionGenerador.org
@@ -3,7 +3,18 @@
 #+SETUPFILE: config.org
 #+OPTIONS: H:2
 
+**  
+:PROPERTIES:
+:beamer_opt: plain
+:END:
+
+#+ATTR_LATEX: :width \textwidth
+[[file:../figs/CableadoCentral.pdf]]
+
+
 * Configuración Eléctrica del Generador
+
+
 
 **  
 :PROPERTIES:
@@ -160,22 +171,23 @@ Para *elegir una configuración* deben tenerse en cuenta diferentes aspectos:
 
 ** Inversión y rendimiento económicos
 
+\vfill
 -  La potencia del generador fotovoltaico está relacionada directamente
    con la *inversión económica* a realizar.
-
+\vfill
 -  Por otra parte, la relación entre *energía generada* y potencia
    nominal es aproximadamente lineal, y por tanto, los *ingresos
    económicos* dependen casi linealmente de la potencia del generador.
-
+\vfill
 -  Por tanto, para decidir la potencia del generador
    ($P_{g}^{*}=N_{s}\cdot N_{p}\cdot P_{m}^{*}$) debe tenerse en cuenta
    el capital o financiación disponible, y el rendimiento económico
    deseado.
 
 ** Terreno ocupado
-
+\vfill
 - La potencia del generador es proporcional al área del generador y al *terreno ocupado* (que también influye, aunque en menor grado, en el cálculo económico).
-
+\vfill
 - Por tanto, debe tenerse en cuenta el espacio disponible (o el coste que se pretende asumir por el uso de terreno).
 
 ** Relación de potencias entre generador e inversor
@@ -199,11 +211,11 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 - Si esta relación es alta, el inversor trabajará con frecuencia en la región de alta eficiencia, pero a cambio es posible que deba limitar la potencia del generador para evitar superar su umbral de corriente admisible.
 
 ** Relación de potencias entre generador e inversor
-
+\vfill
 - Según el *tipo de sistema* (estático, seguimiento) se debe elegir una relación de potencias de generador e inversor.
-
+\vfill
 - En *sistemas de seguimiento* esta probabilidad suele ser alta. Se recomiendan inversores de potencia similar a la del generador  ($P_{g}^{*}/P_{inv}\in\left[1;1.2\right]$)
-
+\vfill
 - No obstante, es posible demostrar que el valor de esta relación no es tan crítico como *elegir un inversor con buena curva de eficiencia*.
 
 * Cableado Eléctrico
@@ -244,13 +256,13 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
   | Aluminio | $\gamma_{\qty{20}{\degree}} = \qty{35,71}{\meter\per\ohm\per\milli\meter\squared}$ | $\gamma_{\qty{70}{\degree}} = \qty{29,67}{\meter\per\ohm\per\milli\meter\squared}$ |
   
 ** Criterio de Caída de Tensión
-
+\vfill
 - Según el apartado 5 de la ITC-BT-40, se exige una caída máxima de
   tensión $\qty{1.5}{\percent}$ de la tensión nominal.
-
+\vfill
 - Para aplicar correctamente este porcentaje es importante caer en la
   cuenta de que *cada zona (DC y AC) tiene su propia tensión nominal*.
-
+\vfill
 - Cuando un circuito (en DC o AC) está dividido en varios tramos (por
   ejemplo, por el uso de cajas de paralelos), la caída de tensión
   total del circuito es la suma de las respectivas caídas en cada uno
@@ -291,13 +303,13 @@ En una instalación se agrupan en una caja de paralelos las salidas los generado
 #+end_export
 Si la tensión nominal de los generadores es de $\qty{500}{\volt}$, este resultado implica que la sección del tramo de la caja de paralelos al inversor se diseñará con una caída de tensión de $\num{0.87} \cdot \num{1.5} \cdot 500 /100 = \qty{6.525}{\volt}$. El tramo desde los generadores hasta la caja de paralelos se diseñará con una caída de tensión de $(1 - \num{0.87}) \cdot \num{1.5} \cdot 500 /100 = \qty{0.975}{\volt}$.
 
-** Cálculo AC
+** Ejemplo de cálculo (AC)
 
-*** Ejemplo
-- En una instalación que conduce $\qty{75}{\ampere}$ a la salida de un
-  inversor trifásico, situado éste a $\qty{100}{\meter}$ de la conexión
-  a red, se deberá utilizar un cable de sección (suponiendo cobre y teniendo en cuenta
-  que $\gamma_{70} = \qty{48}{\meter\per\ohm\per\milli\meter\squared}$):
+En una instalación que conduce $\qty{75}{\ampere}$ a la salida de un
+inversor trifásico, situado éste a $\qty{100}{\meter}$ de la conexión
+a red, se deberá utilizar un cable de sección (suponiendo cobre y
+teniendo en cuenta que $\gamma_{70} =
+\qty{48}{\meter\per\ohm\per\milli\meter\squared}$):
 
 
 #+BEGIN_EXPORT latex
@@ -306,18 +318,20 @@ Si la tensión nominal de los generadores es de $\qty{500}{\volt}$, este resulta
 \]
 #+END_EXPORT
 
-- Dado que la sección de los cables está normalizada, se deberá optar
-  por la sección inmediatamente superior, y por tanto la conexión del
-  inversor a la red se realizará con tres cables de sección
-  $S=\qty{50}{\milli\meter\squared}$.
+Dado que la sección de los cables está normalizada, se deberá optar
+por la sección inmediatamente superior, y por tanto la conexión del
+inversor a la red se realizará con tres cables de sección
+$S=\qty{50}{\milli\meter\squared}$.
 
 ** Intensidad Máxima Admisible
 
 - Con este resultado, es necesario comprobar que la intensidad de diseño es inferior a la intensidad máxima admisible del cable para sus condiciones de servicio, según las tablas de la ITC-BT-07.
 
+\vfill
+
 - No obstante, las secciones que resultan del criterio de caída de tensión aplicado a los sistemas fotovoltaicos habitualmente son sobradamente capaces de conducir la corriente del sistema.
 
-** Continua vs. Alterna
+** COMMENT Continua vs. Alterna
 
 Suponiendo que en una planta con varios inversores trifásicos existe la
 posibilidad de ubicar los inversores debajo del generador FV
