--- a/diapos/ConfiguracionGenerador.tex
+++ b/diapos/ConfiguracionGenerador.tex
@@ -1,4 +1,4 @@
-% Created 2024-02-20 mar 11:21
+% Created 2025-02-25 mar 12:54
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -56,22 +56,27 @@
  pdftitle={Configuración Eléctrica del Generador FV en un SFCR},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 29.1 (Org mode 9.6.11)}, 
+ pdfcreator={Emacs 29.4 (Org mode 9.7.19)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
-
+\begin{frame}[label={sec:org64a6d4c},plain]{}
+\begin{center}
+\includegraphics[width=\textwidth]{../figs/CableadoCentral.pdf}
+\end{center}
+\end{frame}
 \section{Configuración Eléctrica del Generador}
-\label{sec:org974d758}
+\label{sec:org138e525}
 
-\begin{frame}[label={sec:org74c45fd},plain]{}
+
+
+\begin{frame}[label={sec:org131622f},plain]{}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ConfiguracionGenerador.pdf}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:org1628f9d},plain]{Planteamiento}
+\begin{frame}[label={sec:org282d1cf},plain]{Planteamiento}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/ConfiguracionGenerador.pdf}
 \end{center}
@@ -85,7 +90,7 @@
 \end{align*}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org2a19134}]{Modulos en serie}
+\begin{frame}[label={sec:orga76bd94}]{Modulos en serie}
 \begin{itemize}
 \item El inversor está diseñado para soportar una \alert{tensión máxima en la
 entrada}, \(V_{max,inv}\).
@@ -105,7 +110,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
 \]
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org3245e3e}]{Procedimiento de cálculo}
+\begin{frame}[label={sec:org0847732}]{Procedimiento de cálculo}
 \framesubtitle{Tensión máxima}
 
 \begin{itemize}
@@ -128,8 +133,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
       V_{ocG} = N_s \cdot V_{ocM} \rightarrow N_{sMAX}=\frac{V_{max,inv}}{V_{ocM}}
 \]
 \end{frame}
-
-\begin{frame}[label={sec:orgf17cfb2}]{Procedimiento de cálculo}
+\begin{frame}[label={sec:org400ef02}]{Procedimiento de cálculo}
 \framesubtitle{Tensión MPP}
 \begin{itemize}
 \item Temperatura de célula (\(G_{stc},\, T_{a}=\qty{25}{\celsius}\))
@@ -145,7 +149,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
   V_{ocM} = V_{ocM}^{*} + (T_{c}- 25)\cdot\frac{dV_{oc}}{dT_{c}}
 \]
 \end{frame}
-\begin{frame}[label={sec:org80d62cc}]{Procedimiento de cálculo}
+\begin{frame}[label={sec:org85e58e8}]{Procedimiento de cálculo}
 \framesubtitle{Tensión MPP}
 
 \begin{itemize}
@@ -166,7 +170,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
   \end{cases}
 \]
 \end{frame}
-\begin{frame}[label={sec:org51c8fb0}]{Ramas en paralelo}
+\begin{frame}[label={sec:org43b6f67}]{Ramas en paralelo}
 \begin{itemize}
 \item El fabricante del inversor elige los componentes para soportar una \alert{corriente máxima admisible}, \(I_{max,INV}\).
 
@@ -179,8 +183,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
     N_{pMAX}=\frac{I_{max,INV}}{I_{scM}^{*}}
 \]
 \end{frame}
-
-\begin{frame}[label={sec:orgfd1ab2b}]{Configuración del generador}
+\begin{frame}[label={sec:org8392a4b}]{Configuración del generador}
 De los cálculos anteriores se obtiene un \alert{conjunto de configuraciones} del generador que permiten un buen acoplamiento entre inversor y generador. 
 
 Para \alert{elegir una configuración} deben tenerse en cuenta diferentes aspectos:
@@ -198,8 +201,7 @@ estructura.
 \item La curva de eficiencia del inversor depende de la tensión de entrada.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orge0826a1}]{Configuración eléctrica y estructura}
+\begin{frame}[label={sec:org2bbf91d}]{Configuración eléctrica y estructura}
 \begin{itemize}
 \item Es recomendable elegir \alert{series} compuestas por un número de módulos
 que puedan ser ubicados en una \alert{única hilera de la estructura}.
@@ -220,41 +222,44 @@ a las hileras inmediatamente superiores.
 \end{itemize}
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org750e93d}]{Inversión y rendimiento económicos}
+\begin{frame}[label={sec:org7d64d16}]{Inversión y rendimiento económicos}
+\vfill
 \begin{itemize}
 \item La potencia del generador fotovoltaico está relacionada directamente
 con la \alert{inversión económica} a realizar.
-
+\end{itemize}
+\vfill
+\begin{itemize}
 \item Por otra parte, la relación entre \alert{energía generada} y potencia
 nominal es aproximadamente lineal, y por tanto, los \alert{ingresos
 económicos} dependen casi linealmente de la potencia del generador.
-
+\end{itemize}
+\vfill
+\begin{itemize}
 \item Por tanto, para decidir la potencia del generador
 (\(P_{g}^{*}=N_{s}\cdot N_{p}\cdot P_{m}^{*}\)) debe tenerse en cuenta
 el capital o financiación disponible, y el rendimiento económico
 deseado.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orgda628fc}]{Terreno ocupado}
+\begin{frame}[label={sec:orgefcb0fd}]{Terreno ocupado}
+\vfill
 \begin{itemize}
 \item La potencia del generador es proporcional al área del generador y al \alert{terreno ocupado} (que también influye, aunque en menor grado, en el cálculo económico).
-
+\end{itemize}
+\vfill
+\begin{itemize}
 \item Por tanto, debe tenerse en cuenta el espacio disponible (o el coste que se pretende asumir por el uso de terreno).
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orgb510c90}]{Relación de potencias entre generador e inversor}
+\begin{frame}[label={sec:org439bb26}]{Relación de potencias entre generador e inversor}
 Dado que la potencia entregada por el generador varía con las condiciones meteorológicas, el inversor trabajará en diferentes zonas de su curva de eficiencia.
 
 \begin{center}
 \includegraphics[height=0.75\textheight]{../figs/CurvaInversor.pdf}
 \end{center}
 \end{frame}
-
-
-\begin{frame}[label={sec:org830ae96}]{Relación de potencias entre generador e inversor}
+\begin{frame}[label={sec:orgd108377}]{Relación de potencias entre generador e inversor}
 \begin{itemize}
 \item Por tanto, una de las preguntas a responder es \alert{qué relación debe existir entre la potencia del generador FV y el inversor}.
 \end{itemize}
@@ -267,27 +272,29 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 \item Si esta relación es alta, el inversor trabajará con frecuencia en la región de alta eficiencia, pero a cambio es posible que deba limitar la potencia del generador para evitar superar su umbral de corriente admisible.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orge1ea6e9}]{Relación de potencias entre generador e inversor}
+\begin{frame}[label={sec:org8423233}]{Relación de potencias entre generador e inversor}
+\vfill
 \begin{itemize}
 \item Según el \alert{tipo de sistema} (estático, seguimiento) se debe elegir una relación de potencias de generador e inversor.
-
+\end{itemize}
+\vfill
+\begin{itemize}
 \item En \alert{sistemas de seguimiento} esta probabilidad suele ser alta. Se recomiendan inversores de potencia similar a la del generador  (\(P_{g}^{*}/P_{inv}\in\left[1;1.2\right]\))
-
+\end{itemize}
+\vfill
+\begin{itemize}
 \item No obstante, es posible demostrar que el valor de esta relación no es tan crítico como \alert{elegir un inversor con buena curva de eficiencia}.
 \end{itemize}
 \end{frame}
-
 \section{Cableado Eléctrico}
-\label{sec:org49e8e66}
+\label{sec:org7a65dee}
 
-\begin{frame}[label={sec:org68c101d},plain]{}
+\begin{frame}[label={sec:org9ac5d68},plain]{}
 \begin{center}
 \includegraphics[width=\textwidth]{../figs/CableadoCentral.pdf}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:orgbb8bf81}]{Características básicas}
+\begin{frame}[label={sec:orga13754f}]{Características básicas}
 \begin{itemize}
 \item Criterio de caída de tensión.
 
@@ -296,8 +303,7 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 \item En sistemas de gran tamaño reducir bucles.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org89b690d}]{Criterio de Caída de Tensión}
+\begin{frame}[label={sec:org7571cd1}]{Criterio de Caída de Tensión}
 \begin{itemize}
 \item En primer lugar se calculan las secciones mediante el criterio de caida de tensión (RBT ITC-BT-07):
 \end{itemize}
@@ -313,31 +319,34 @@ temperatura de operación:
 
 \begin{center}
 \begin{tabular}{lll}
-Material & \(T = \qty{20}{\celsius}\) & \(T = \qty{70}{\celsius}\)\\[0pt]
+Material & \(T = \qty{20}{\celsius}\) & \(T = \qty{70}{\celsius}\)\\
 \hline
-Cobre & \(\gamma_{\qty{20}{\degree}} = \qty{58}{\meter\per\ohm\per\milli\meter\squared}\) & \(\gamma_{\qty{70}{\degree}} = \qty{48,47}{\meter\per\ohm\per\milli\meter\squared}\)\\[0pt]
-Aluminio & \(\gamma_{\qty{20}{\degree}} = \qty{35,71}{\meter\per\ohm\per\milli\meter\squared}\) & \(\gamma_{\qty{70}{\degree}} = \qty{29,67}{\meter\per\ohm\per\milli\meter\squared}\)\\[0pt]
+Cobre & \(\gamma_{\qty{20}{\degree}} = \qty{58}{\meter\per\ohm\per\milli\meter\squared}\) & \(\gamma_{\qty{70}{\degree}} = \qty{48,47}{\meter\per\ohm\per\milli\meter\squared}\)\\
+Aluminio & \(\gamma_{\qty{20}{\degree}} = \qty{35,71}{\meter\per\ohm\per\milli\meter\squared}\) & \(\gamma_{\qty{70}{\degree}} = \qty{29,67}{\meter\per\ohm\per\milli\meter\squared}\)\\
 \end{tabular}
 \end{center}
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org1e89967}]{Criterio de Caída de Tensión}
+\begin{frame}[label={sec:orge0a7746}]{Criterio de Caída de Tensión}
+\vfill
 \begin{itemize}
 \item Según el apartado 5 de la ITC-BT-40, se exige una caída máxima de
 tensión \(\qty{1.5}{\percent}\) de la tensión nominal.
-
+\end{itemize}
+\vfill
+\begin{itemize}
 \item Para aplicar correctamente este porcentaje es importante caer en la
 cuenta de que \alert{cada zona (DC y AC) tiene su propia tensión nominal}.
-
+\end{itemize}
+\vfill
+\begin{itemize}
 \item Cuando un circuito (en DC o AC) está dividido en varios tramos (por
 ejemplo, por el uso de cajas de paralelos), la caída de tensión
 total del circuito es la suma de las respectivas caídas en cada uno
 de los tramos.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org03ddf15}]{Cálculo por tramos (DC)}
+\begin{frame}[label={sec:org4c15ab0}]{Cálculo por tramos (DC)}
 \begin{itemize}
 \item Al existir dos tramos y una única condición existe un grado de libertad que permite fijar la sección de uno de los tramos u optimizar el volumen total de conductor empleado.
 
@@ -362,8 +371,7 @@ de los tramos.
 \end{itemize}
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org9c623c1}]{Ejemplo de cálculo por tramos (DC)}
+\begin{frame}[label={sec:orgd9e9b9d}]{Ejemplo de cálculo por tramos (DC)}
 En una instalación se agrupan en una caja de paralelos las salidas los generadores ubicados en 20 seguidores, cada uno de ellos con \(\qty{30}{\ampere}\). Esta caja de paralelos está ubicada a \(\qty{200}{\meter}\) del inversor y a \(\qty{30}{\meter}\) de todos los seguidores.
 \begin{align*}
   \frac{\Delta U_{inv}}{\Delta U} &= \frac{1}{1+\sqrt{\frac{\sum_{i=1}^nL_{i}^2
@@ -373,53 +381,35 @@ En una instalación se agrupan en una caja de paralelos las salidas los generado
 \end{align*}
 Si la tensión nominal de los generadores es de \(\qty{500}{\volt}\), este resultado implica que la sección del tramo de la caja de paralelos al inversor se diseñará con una caída de tensión de \(\num{0.87} \cdot \num{1.5} \cdot 500 /100 = \qty{6.525}{\volt}\). El tramo desde los generadores hasta la caja de paralelos se diseñará con una caída de tensión de \((1 - \num{0.87}) \cdot \num{1.5} \cdot 500 /100 = \qty{0.975}{\volt}\).
 \end{frame}
-
-\begin{frame}[label={sec:orgb7ac8b9}]{Cálculo AC}
-\begin{block}{Ejemplo}
-\begin{itemize}
-\item En una instalación que conduce \(\qty{75}{\ampere}\) a la salida de un
+\begin{frame}[label={sec:org73dcdc8}]{Ejemplo de cálculo (AC)}
+En una instalación que conduce \(\qty{75}{\ampere}\) a la salida de un
 inversor trifásico, situado éste a \(\qty{100}{\meter}\) de la conexión
-a red, se deberá utilizar un cable de sección (suponiendo cobre y teniendo en cuenta
-que \(\gamma_{70} = \qty{48}{\meter\per\ohm\per\milli\meter\squared}\)):
-\end{itemize}
+a red, se deberá utilizar un cable de sección (suponiendo cobre y
+teniendo en cuenta que \(\gamma_{70} =
+\qty{48}{\meter\per\ohm\per\milli\meter\squared}\)):
 
 
 \[
   S=\frac{\sqrt{3} \cdot 100 \cdot 75}{48 \cdot \qty{1.5}{\percent}\cdot400}=\qty{45.46}{\milli\meter\squared}
 \]
 
-\begin{itemize}
-\item Dado que la sección de los cables está normalizada, se deberá optar
+Dado que la sección de los cables está normalizada, se deberá optar
 por la sección inmediatamente superior, y por tanto la conexión del
 inversor a la red se realizará con tres cables de sección
 \(S=\qty{50}{\milli\meter\squared}\).
-\end{itemize}
-\end{block}
 \end{frame}
-
-\begin{frame}[label={sec:org3bc434b}]{Intensidad Máxima Admisible}
+\begin{frame}[label={sec:orgd626270}]{Intensidad Máxima Admisible}
 \begin{itemize}
 \item Con este resultado, es necesario comprobar que la intensidad de diseño es inferior a la intensidad máxima admisible del cable para sus condiciones de servicio, según las tablas de la ITC-BT-07.
+\end{itemize}
 
+\vfill
+
+\begin{itemize}
 \item No obstante, las secciones que resultan del criterio de caída de tensión aplicado a los sistemas fotovoltaicos habitualmente son sobradamente capaces de conducir la corriente del sistema.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orgcf33da3}]{Continua vs. Alterna}
-Suponiendo que en una planta con varios inversores trifásicos existe la
-posibilidad de ubicar los inversores debajo del generador FV
-(\emph{distribución en alterna}) o en un centro específico junto al punto de
-conexión a red (\emph{distribución en continua}), \alert{¿cuál es la tensión de
-trabajo en continua que permite optar por una distribución en continua?}
-
-Se puede demostrar que para tensiones de generador \(V_{mpp} \geq
-\qty{475}{\volt}\), la distribución en continua es preferible a la
-distribución en alterna desde el punto de vista de masa de conductor
-necesario.
-\end{frame}
-
-
-\begin{frame}[label={sec:org034d017}]{Estrategia de Cableado}
+\begin{frame}[label={sec:orgc9cd192}]{Estrategia de Cableado}
 \begin{block}{Secuencial (\emph{daisy chain wiring})}
 \begin{center}
 \includegraphics[width=\textwidth]{../figs/DaisyChainWiring.png}
@@ -433,8 +423,7 @@ necesario.
 \end{itemize}
 \end{block}
 \end{frame}
-
-\begin{frame}[label={sec:org84c0569}]{Estrategia de Cableado}
+\begin{frame}[label={sec:org5db57dd}]{Estrategia de Cableado}
 \begin{block}{Salteado (\emph{leapfrog wiring})}
 \begin{center}
 \includegraphics[width=\textwidth]{../figs/LeapfrogWiring.png}
