--- a/figs/ConfiguracionGenerador.tex
+++ b/figs/ConfiguracionGenerador.tex
@@ -24,14 +24,14 @@
   to [short, *-*] (14,3)
   to [short, *-*] (14,4.5)
   to [short, *-*] (14,6);
-  \draw
-  (-1,3) to [short, i = $I_g$] (0,3)
-  (14,3) to [short, i = $I_g$] (15,3);
-  \draw[<->]
+  \draw[line width = 1.2pt]
+  (-1,3) to [short, i = $I_G$] (0,3)
+  (14,3) to [short, i = $I_G$] (15,3);
+  \draw[<->, darkgray]
   (0,-1) -- node[below] {$N_s$} (14,-1);
-  \draw[<->]
-  (-1.1,0) -- node[left] {$N_p$} (-1.1,6);
-  \draw
+  \draw[<->, darkgray]
+  (-1.5,0) -- node[left] {$N_p$} (-1.5,6);
+  \draw[red!70!black]
   (3,6.7) to [open, v= $V_M$] (0,6.7)
   (16,7.5) to [open, v= $V_G$] (-2,7.5);
 \end{circuitikz}
